add: implement command pattern with BaseCommand and CommandInfo annotations for various commands